# event-finder-worker

./: .gitignore  pyproject.toml
app/: celery_app.py  logging_config.py  tasks.py
core/: config.py  upstash_connection_link.py
